2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* basic.cs: Add test for div.un/rem.un constant folding.

2006-02-03  Neale Ferguson <neale@sinenomine.net>

	* cpu-s390x.md: correct int_xor_imm length

2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* generics.2.cs: New test for #77442.

	* jit-icalls.c (helper_compile_generic_method): Check for null. Fixes
	#77442.

2006-02-02  Martin Baulig  <martin@ximian.com>

	* tramp-x86.c, tramp-amd64.c: It's now safe to #include
	<mono/metadata/mono-debug-debugger.h>	

	* debug-mini.c: Don't #define _IN_THE_MONO_DEBUGGER.

2006-02-02  Martin Baulig  <martin@ximian.com>

	* debug-debugger.h: New header file for debug-debugger.c.

	* debug-debugger.c: Big API cleanup; don't run the managed Main()
	function is a separate thread anymore; add support for attaching.

2006-02-01  Zoltan Varga  <vargaz@gmail.com>

	* tramp-x86.c: Fix a warning.

2006-01-31  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c (mono_arch_compute_omit_fp): Avoid hitting an assertion
	on very large methods.

	* aot.c (load_patch_info): Fix a warning.

Mon Jan 30 12:51:10 CET 2006 Paolo Molaro <lupus@ximian.com>

	* cpu-pentium.md, mini-x86.c, inssel.brg, inssel-x86.brg,
	mini-ops.h: alu membase optimizations.

Fri Jan 27 21:11:08 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini-ops.h, mini.c, inssel.brg, inssel-x86.brg: opcode
	to speedup StringBuilder.

2006-01-27  Zoltan Varga  <vargaz@gmail.com>

	* dominators.c (mono_compute_natural_loops): Fix detection of
	loop body start blocks.

	* mini-exceptions.c (mono_print_thread_dump): Fix non x86 builds.

2006-01-26  Zoltan Varga  <vargaz@gmail.com>

	* mini.h mini.c mini-exceptions.c: Add thread dump support. Fixes
	#75145.

2006-01-25  Massimiliano Mantione  <massi@ximian.com>

        * aliasing.c: Fixed aliasing issue on 64 bit archs.

2006-01-25  Martin Baulig  <martin@ximian.com>

	* debug-debugger.c: Moved the `MonoDebuggerManager' and